# Calling-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  simulate_call.py  test_imports.py  test_output.txt  test_stt.py  test_vad.py
android/: build.gradle.kts  settings.gradle.kts
android-gateway/: README-ANDROID.md
android-gateway/app/src/main/java/com/callagent/gateway/: AudioCapture.kt  CallService.kt  DefaultDialerHelper.kt  GatewayServer.kt  MainActivity.kt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/callingagent/gateway/: AndroidCallController.kt  AudioCapture.kt  AudioStreamer.kt  CallService.kt  GatewayService.kt  MainActivity.kt  Models.kt  WebSocketBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
backend/: __init__.py  audio_mixer.py  call_controller.py  config.py  conversation_engine.py  conversation_loop.py  lead_fetcher.py  models.py  orchestrator.py  recording_manager.py  server.py  session_store.py  sheet_updater.py  speech_to_text.py  text_to_speech.py  transcript_analyzer.py
backend/tests/: test_imports.py  test_mock_loop.py
prompts/: analysis_prompt.txt  sales_system_prompt.txt
tasks/: lessons.md  todo.md
tests/: test_conversation_engine.py  test_lead_fetcher.py  test_mock_loop.py  test_recording.py  test_session_store.py  test_sheet_updater.py  test_transcript_analyzer.py
