[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calling-agent"
version = "0.1.0"
description = "Autonomous Hindi Voice Calling Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "gspread>=6.1.0",
    "google-auth-oauthlib>=1.2.0",
    "groq>=0.9.0",
    "faster-whisper>=1.0.3",
    # silero VAD — the pip package is 'silero' (not silero-vad)
    "silero",
    # piper-tts published on PyPI as 'piper-tts'
    "piper-tts",
    "pydub>=0.25.1",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    # CPU-only torch — avoids the 3 GB CUDA download on a dev machine
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pyright]
include = ["backend"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
